plugins {
    id 'java'
    id 'application'
    id "org.openjfx.javafxplugin" version "0.0.9"
}

group 'com.glovesy'
version '1.0-SNAPSHOT'

sourceCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

javafx {
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics' ]
    version = '11.0.2'
    application {
        def javafxHome = System.getenv('JAVAFX_HOME')
        mainClassName = 'gui.Main'
        applicationName = 'foo-app'
        applicationDefaultJvmArgs = [
                "--module-path=${javafxHome}" + File.separator + 'lib',
                '--add-modules=javafx.controls,javafx.graphics']
        println("applicationDefaultJvmArgs:" + applicationDefaultJvmArgs)
    }
}


